<resources>
    <string name="app_name">Recipe Finder</string>
    <string name="txtViewTitle">Recipes</string>
    <string name="txtViewIngred">Ingredients:</string>
    <string name="txtViewDir">Directions:</string>
    <string name="txtViewMainTitle">Ingredients</string>
    <string name="editTxtSearchIngredient">Search Ingredients</string>
    <string name="btnSearchIngredients">Search Ingredients</string>
    <string name="btnSearchRecipes">Search Recipes</string>
    <string name="TxtTitle">"Test Page by Hye Kyung "</string>
    <string name="BtnTestTxt">Test</string>
    <string name="txtRestListTitle">Recipes</string>
    <string name="editTxtServingSize">Serving Size (deafult: 1)</string>
    <string name="txtRecipeResultTxt">recipe name</string>
    <string name="txtNoResult" />
    <string name="ImageViewbg">Background image</string>
    <string name="textViewName">Recipe_Finder</string>
    <string name="ImageView6">Logo</string>
    <string name="ImageView5">Another food photo</string>
    <string name="textViewLogo">Recipe_Finder</string>
    <string name="textViewreg">Register</string>
    <string name="textView">Login</string>
    <string name="textViewSign">Log in</string>
    <string name="editTextTextUserName">Username</string>
    <string name="editTextEmail">Email</string>
    <string name="editTextPassword1">Password</string>
    <string name="editTextConfirmPassword">Confirm Password</string>
    <string name="textView2">Already have an account?</string>
    <string name="btnRegister">Register</string>
    <string name="editTextPassword">Password</string>
    <string name="editTextEmailAddress">Email</string>
    <string name="btnLogin">Log In</string>
    <string name="textView3">Forgot Password?</string>
    <string name="btnGoogle">Google</string>
    <string name="btnFacebook">Facebook</string>
    <string name="TextView6">Register</string>
    <string name="TextViewLogin">Login</string>
    <string name="btnGoogle2">Google</string>
    <string name="btnFacebook2">Facebook</string>
    <string name="TextViewSocial">Or Signin With</string>
    <string name="checkBox">Remember me</string>
    <string name="textViewSignIn">Register</string>
    <string name="textViewSkip">Skip</string>
    <string name="btnSignOut">SignOut</string>
    <string name="btnSkipLogin">Skip</string>
    <string name="btnMyFavoriteTxt">Favourites</string>
    <string name="EditTxtMsg">Enter Message</string>
    <string name="btnShare">Share Recipe</string>
</resources>